--- a/frontend/src/styles/dashHeader.css
+++ b/frontend/src/styles/dashHeader.css
@@ -6,10 +6,10 @@
 .dash-header {
   position: fixed;
   top: 0;
-  left: 280px; /* Alinhado com a sidebar */
+  left: 80px; /* Alinhado com a sidebar compacta */
   right: 0;
   height: 70px;
-  padding: 0 32px;
+  padding: 0 24px;
 
   display: flex;
   align-items: center;
